--- a/service_snnifer/package.json
+++ b/service_snnifer/package.json
@@ -9,6 +9,9 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "axios": "^1.7.2",
+        "cors": "^2.8.5",
+        "express": "^4.19.2",
         "qrcode-terminal": "^0.12.0",
         "whatsapp-web.js": "^1.23.0"
     }
