--- a/service_snnifer/package.json
+++ b/service_snnifer/package.json
@@ -12,6 +12,7 @@
         "axios": "^1.7.2",
         "cors": "^2.8.5",
         "express": "^4.19.2",
+        "openai": "^4.51.0",
         "qrcode-terminal": "^0.12.0",
         "whatsapp-web.js": "^1.23.0"
     }
