--- a/service_crud/package.json
+++ b/service_crud/package.json
@@ -8,7 +8,8 @@
         "express": "^4.19.2",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.4.1",
-        "nodemon": "^3.1.3"
+        "nodemon": "^3.1.3",
+        "qrcode": "^1.5.4"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
