--- a/service_snnifer/package.json
+++ b/service_snnifer/package.json
@@ -11,6 +11,8 @@
     "dependencies": {
         "axios": "^1.7.2",
         "cors": "^2.8.5",
+        "dockerode": "^4.0.2",
+        "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "jsonwebtoken": "^9.0.2",
         "openai": "^4.51.0",
