--- a/service_crud/package.json
+++ b/service_crud/package.json
@@ -7,6 +7,7 @@
         "cors": "^2.8.5",
         "express": "^4.19.2",
         "jsonwebtoken": "^9.0.2",
+        "moment-timezone": "^0.5.45",
         "mongoose": "^8.4.1",
         "nodemon": "^3.1.3",
         "qrcode": "^1.5.4"
