--- a/service_snnifer/Dockerfile
+++ b/service_snnifer/Dockerfile
@@ -1,17 +1,46 @@
-FROM node:14-alpine
+FROM node:18
 
-RUN apk add --no-cache \
-    chromium \
-    nss \
-    freetype \
-    harfbuzz \
+RUN apt-get update \
+    && apt-get install -y \
+    gconf-service \
+    libgbm-dev \
+    libasound2 \
+    libatk1.0-0 \
+    libc6 \
+    libcairo2 \
+    libcups2 \
+    libdbus-1-3 \
+    libexpat1 \
+    libfontconfig1 \
+    libgcc1 \
+    libgconf-2-4 \
+    libgdk-pixbuf2.0-0 \
+    libglib2.0-0 \
+    libgtk-3-0 \
+    libnspr4 \
+    libpango-1.0-0 \
+    libpangocairo-1.0-0 \
+    libstdc++6 \
+    libx11-6 \
+    libx11-xcb1 \
+    libxcb1 \
+    libxcomposite1 \
+    libxcursor1 \
+    libxdamage1 \
+    libxext6 \
+    libxfixes3 \
+    libxi6 \
+    libxrandr2 \
+    libxrender1 \
+    libxss1 \
+    libxtst6 \
     ca-certificates \
-    ttf-freefont
-
-RUN addgroup -S pptruser && adduser -S -G pptruser pptruser
-
-ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
-    PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
+    fonts-liberation \
+    libappindicator1 \
+    libnss3 \
+    lsb-release \
+    xdg-utils \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 COPY package.json .
@@ -19,6 +48,6 @@ COPY snnifer-docker.js .
 
 RUN npm install
 
-USER pptruser
+EXPOSE 5555
 
 CMD ["node", "snnifer-docker.js"]
