--- a/service_crud/package.json
+++ b/service_crud/package.json
@@ -11,7 +11,8 @@
         "moment-timezone": "^0.5.45",
         "mongoose": "^8.4.1",
         "nodemon": "^3.1.3",
-        "qrcode": "^1.5.4"
+        "qrcode": "^1.5.4",
+        "uuid": "^10.0.0"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
